[gd_scene load_steps=16 format=3 uid="uid://4b64dirk2j2m"]

[ext_resource type="Script" uid="uid://cmp1ofol0qr5v" path="res://scripts/swing_hammer.gd" id="1_l30kg"]
[ext_resource type="Texture2D" uid="uid://cs2hfj5ciawpj" path="res://sprites/NewHammer16x16.png" id="2_ge8dg"]
[ext_resource type="Texture2D" uid="uid://bko182e3b1kor" path="res://sprites/N_NewHammer16x16.png" id="3_gbauc"]
[ext_resource type="PackedScene" uid="uid://b36brkot0lgsi" path="res://scenes/FX/spark_particle.tscn" id="3_w77xj"]
[ext_resource type="AudioStream" uid="uid://c3sv7xrjtbda6" path="res://audio/sfx/clang/Clang1.wav" id="4_d3kj0"]
[ext_resource type="AudioStream" uid="uid://bx6p1a6k336ux" path="res://audio/sfx/clang/Clang2.wav" id="5_d6uyk"]
[ext_resource type="Material" uid="uid://d0k2qu7adw4ws" path="res://scenes/FX/Process_Materials/hammer_spark.tres" id="5_gbauc"]
[ext_resource type="AudioStream" uid="uid://bjy8by8kyknw5" path="res://audio/sfx/clang/Clang3.wav" id="6_ge8dg"]
[ext_resource type="AudioStream" uid="uid://cmmgldlqixtgw" path="res://audio/sfx/clang/Clang4.wav" id="7_gbauc"]
[ext_resource type="AudioStream" uid="uid://cxf1t3vsueku4" path="res://audio/sfx/clang/Clang5.wav" id="8_amqgd"]
[ext_resource type="AudioStream" uid="uid://cpnjtkyvk1hy1" path="res://audio/sfx/clang/Clang6.wav" id="9_nfdx7"]
[ext_resource type="AudioStream" uid="uid://bdmt2dwkl6gro" path="res://audio/sfx/clang/Clang7.wav" id="10_qctb0"]

[sub_resource type="CanvasTexture" id="CanvasTexture_amqgd"]
diffuse_texture = ExtResource("2_ge8dg")
normal_texture = ExtResource("3_gbauc")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_882yx"]
size = Vector2(2, 13)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_tmujs"]
streams_count = 7
stream_0/stream = ExtResource("4_d3kj0")
stream_1/stream = ExtResource("5_d6uyk")
stream_2/stream = ExtResource("6_ge8dg")
stream_3/stream = ExtResource("7_gbauc")
stream_4/stream = ExtResource("8_amqgd")
stream_5/stream = ExtResource("9_nfdx7")
stream_6/stream = ExtResource("10_qctb0")

[node name="SwingHammer" type="RigidBody2D" groups=["hammer"]]
collision_mask = 3
input_pickable = true
center_of_mass_mode = 1
center_of_mass = Vector2(2.5, -6.5)
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_l30kg")

[node name="Hammer16x16" type="Sprite2D" parent="."]
texture = SubResource("CanvasTexture_amqgd")

[node name="Handle" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_882yx")

[node name="Head" type="CollisionPolygon2D" parent="." groups=["hammer"]]
polygon = PackedVector2Array(-3, -8, -3, -7, -4, -7, -4, -5, 4, -5, 4, -8)

[node name="Spark" parent="." instance=ExtResource("3_w77xj")]
position = Vector2(4, -6.5)
emitting = false
amount = 8
lifetime = 1.5
one_shot = true
explosiveness = 1.0
process_material = ExtResource("5_gbauc")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_tmujs")
bus = &"SFX"

[node name="SparkOrigin" type="Marker2D" parent="."]
position = Vector2(4, -6.5)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
